[package]
authors = ["The Rust Project Developers"]
name = "libtest"
version = "0.0.2"
edition = "2018"
description = "Rust's built in unit-test and micro-benchmarking framework"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/libtest"
homepage = "https://github.com/rust-lang/libtest"
repository = "https://github.com/rust-lang/libtest"
readme = "README.md"

[dependencies]
termcolor = { version = "1.0", git = "https://github.com/crlf0710/termcolor"}
getopts = { version = "0.2", git = "https://github.com/crlf0710/getopts"}
libc = { version = "0.2", git = "https://github.com/crlf0710/libc", default-features = false}
std = { version = "1.0.0", optional = true, package = 'rustc-test-workspace-std' }

[features]
default = ['libc/std']
unstable = []
rustc-dep-of-test = ['termcolor/rustc-dep-of-test', 'getopts/rustc-dep-of-test', 'libc/rustc-dep-of-test', 'std']
